# Copyright (C) 2005, 2006, 2007 Giuseppe Martino <denever@users.sf.net>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

noinst_HEADERS =blnkdef.h fft1def.h ftdi.h hwaredef.h llsqdef.h powtdef.h sdrdef.h sigdef.h uidef.h wdef.hcaldef.h fft2def.h globdef.h keyboard_def.h\
	 options.h rusage.h seldef.h thrdef.h users.h xdef.hdlldef.h fft3def.h graphcal.h ldef.h perseusdef.h screendef.h semaphore.h txdef.h vernr.h


